<resources>
    <string name="service_running">Running in the background.</string>
    <string name="app_name">ShadowsocksProxy</string>
    <string name="forward_success">Proxy Service Successed.</string>
    <string name="forward_fail">Proxy Service Failed.</string>
    <string name="service_stopped">ShadowsocksProxy service stopped.</string>
    <string name="auto_reconnected">Auto Reconnected</string>
    <string name="reconnect_success">Reconnected successfully.</string>
    <string name="already_stopped">Service has been stopped already.</string>
    <string name="already_running">Service has been started already.</string>
    <string name="forward_stop">Proxy Service Stopped</string>
    <string name="service_failed">Please check your network and login information</string>
    <string name="reconnect_fail">Cannot reconnect</string>
    <string name="ok_iknow">OK, I know</string>
    <string name="proxy">Address</string>
    <string name="port">Port</string>
    <string name="sitekey">Site Key</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_reconnect">Auto reconnect</string>
    <string name="auto_set_proxy">Global Proxy</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="feedback">Feedback @ofmax</string>
    <string name="proxy_cat">Shadowsocks Proxy Settings</string>
    <string name="fearute_cat">Feature Settings</string>
    <string name="service_controller">Proxy Switch</string>
    <string name="function_cat">Service Controller</string>
    <string name="service_summary">Enable / Disable Proxy</string>
    <string name="proxy_summary">Shadowsocks Proxy URL</string>
    <string name="port_summary">Listening port</string>
    <string name="sitekey_summary">Site key for WallProxy / GoAgent</string>
    <string name="port_alert">The port number should be greater than 1024</string>
    <string name="auto_connect_summary">Start Shadowsocks Proxy at the startup</string>
    <string name="auto_set_proxy_summary">Set up the global proxy (needs ROOT permission and
		IPTABLES support)</string>
    <string name="port_empty">Port should not be empty</string>
    <string name="proxy_empty">Proxy should not be empty</string>
    <string name="install_cat">Package configure</string>
    <string name="isInstalled">Install / Uninstall</string>
    <string name="download">Downloading</string>
    <string name="downloading">Downloading, Patient Please...</string>
    <string name="isInstalled_summary">Install / Uninstall extra packages (need SD card)</string>
    <string name="install_alert">Please install dependent module first! (Scroll to
		the bottom, and select to install)</string>
    <string name="sdcard_alert">Please make sure you have a SD CARD!</string>
    <string name="recovery">Reset</string>
    <string name="unzip">Unzipping...</string>
    <string name="proxyed_apps">Individual Proxy</string>
    <string name="proxyed_apps_summary">Set individual proxy for apps (needs ROOT
		permission and
		IPTABLES support)</string>
    <string name="proxyed_help">Select apps to use with ShadowsocksProxy:</string>
    <string name="crash_alert">An unexpected exit detected, context has been
		recovered</string>
    <string name="copy_rights">ShadowsocksProxy is an open source project
		published under
		the GPLv3. \n\nIf you have any questions, please visit
		our project page on
		googlecode. \n\n(shadowsocksproxy.googlecode.com)</string>
    <string name="about">About</string>
    <string name="proxy_type">Proxy Type</string>
    <string-array name="gfw_list">
        <item>209.0.0.0/8</item>
        <item>72.0.0.0/8</item>
        <item>74.0.0.0/8</item>
        <item>68.0.0.0/8</item>
        <item>69.0.0.0/8</item>
        <item>66.0.0.0/8</item>
        <item>64.0.0.0/8</item>
        <item>199.0.0.0/8</item>
        <item>168.0.0.0/8</item>
        <item>67.0.0.0/8</item>
        <item>173.0.0.0/8</item>
        <item>202.248.0.0/16</item>
    </string-array>
    <string-array name="chn_list">
        <item>1.0.0.0/8</item>
        <item>14.0.0.0/8</item>
        <item>27.0.0.0/8</item>
        <item>36.0.0.0/8</item>
        <item>39.0.0.0/8</item>
        <item>42.0.0.0/8</item>
        <item>49.0.0.0/8</item>
        <item>58.0.0.0/7</item>
        <item>60.0.0.0/7</item>
        <item>96.0.0.0/3</item>
        <item>128.0.0.0/4</item>
        <item>171.0.0.0/8</item>
        <item>175.0.0.0/8</item>
        <item>180.0.0.0/8</item>
        <item>182.0.0.0/8</item>
        <item>183.0.0.0/8</item>
        <item>202.0.0.0/8</item>
        <item>203.0.0.0/8</item>
        <item>210.0.0.0/8</item>
        <item>211.0.0.0/8</item>
        <item>216.0.0.0/5</item>
        <item>192.168.0.0/16</item>
        <item>10.0.0.0/8</item>
        <item>172.16.0.0/12</item>
    </string-array>
    <string name="mirror_list">ZmNhcGpwfHBzd3N3ZXxzdG9ybWZhdHdvd3xrZWRpZ3VvfGdmd2Rhb3xiZWFyYmVhcmhqMXxjYW9nb2FnZW50fHByb3h5NjY3fGFlbHhzYW18bWF4bWFydGFpbmdvYWdlbnR8bWV0YWxqb2tlcjEwMDJ8c2hlbmRhbnB1ZmYxfHJveHNreWZxfGZsb3VzZXByb3h5fHRhb2Vyc2h1fGhxeTUxMjI4fGxpaGFuZzkxMnxmcmVlNG0yZ298cGV0ZXJtYXBsZXxnb2FnZW50LWR1cDAwMXxvaWNxZGFuaWVsfGxpYW5neXk4ODg4fGNhdGFtZWk2fHN1bm55aGFuODIwfHBpYW9oYW44NHxibGluZGNoaW5hfHB1YmxpY2dvYWdlbnQxfHl1c2h1bnlhb3pob25nZ3VvfHN0ZWZ3b28tZnVjay1nZnd8Y29tcHV0ZXJ4YW18bGFvbGlhbm5hbmFwcDF8Y2ZhbnMxOTgyfHh1ZXJvbnx6cWhzZnp8c3dhZ21vbnxmb3JqYXBhbmZvbnxpMzMwNjIwMDk4OHx5dW1pbmc1MjAxMzR8YXpyYWVsZ3p8YmVlcmdvYWdlbnR8Y29taXRjbnxnb291dGJhYWF8d2hzaG1kc2ZzdGNzaDE2M3xocS1nb2FnZW50fGJic2NjYnN8Y2x5aHkxOTczfHZpcC0xMTE1fG15bmVjcXF8bXluZWN0dHx6MTY0OTgwMzE2fGNvZGluZ3RpbWVsZXNzfGNhaWh1aTA4MDE=</string>
    <string name="connecting">Connecting...</string>
    <string name="initializing">Initializing...</string>
    <string name="recovering">Reseting...</string>
    <string name="https_alert">Please modify your proxy host to start with
		"https://"</string>
    <string name="https_proxy">Enable HTTPS proxy</string>
    <string name="https_proxy_summary">Proxy HTTPS through Shadowsocks, not compatible with most
		apps</string>
    <string name="notif_cat">Notification Settings</string>
    <string name="notif_ringtone_title">Ringtone</string>
    <string name="notif_ringtone_summary">Select the notification\'s ringtone</string>
    <string name="notif_vibrate_title">Vibrate</string>
    <string name="notif_vibrate_summary">Also vibrate when connection status changes</string>
    <string name="loading">Loading app list...</string>
    <string name="enable_market">Enable Market</string>
    <string name="enable_market_summary">Only for users in China, help to update app from
		Android Market (need reboot)</string>
    <string name="auto_set_gfwlist">Enable CHN Route</string>
    <string name="auto_set_gfwlist_summary">Bypass all sites located in China (needs ROOT
		permission and
		IPTABLES support)</string>
    <string name="toast_start">Connecting to Shadowsocks Proxy</string>
    <string name="toast_restart">Reconnecting to Shadowsocks Proxy</string>
    <string name="browser">Shadowsocks Browser</string>
    <string name="browser_summary">Start a browser through Shadowsocks proxy, for users
		without root permission or iptables support</string>
    <string name="default_proxy_alert">You are using the default proxy, which has a quota
		of only 10G bandwidth every day. Please deploy your own
		servers to get
		more free bandwidth quota with Google App Engine.\n\nYou can find more
		information here: https://github.com/phus/goagent</string>
    <string name="warning">Warning</string>
    <string name="ApplicationName">Zirco Browser</string>
    <string name="ApplicationNameUrl">Zirco - %s</string>
    <string name="ApplicationDescription">Zirco is an open-source browser for Android.</string>
    <string name="AboutActivity.Title">About</string>
    <string name="AboutActivity.VersionText">Version:</string>
    <string name="AboutActivity.UrlTextValue">http://code.google.com/p/zirco-browser/</string>
    <string name="AboutActivity.LicenseText">License:</string>
    <string name="AboutActivity.LicenseTextValue">GPL v3</string>
    <string name="Main.MenuAddBookmark">Add bookmark</string>
    <string name="Main.MenuShowBookmarks">Bookmarks</string>
    <string name="Main.MenuShowHistory">History</string>
    <string name="Main.MenuShowDownloads">Downloads</string>
    <string name="Main.MenuPreferences">Preferences</string>
    <string name="Main.MenuOpen">Open</string>
    <string name="Main.MenuOpenNewTab">Open in new tab</string>
    <string name="Main.MenuDownload">Download</string>
    <string name="Main.DownloadStartedMsg">Download start.</string>
    <string name="Main.DownloadFinishedMsg">Download complete.</string>
    <string name="Main.DownloadErrorMsg">Download error: %s</string>
    <string name="Main.ToastTabSwitchMessage">Tab %s</string>
    <string name="Main.ToastTabSwitchFullMessage">Tab %1$s: %2$s</string>
    <string name="Main.VndErrorTitle">Unable to open url</string>
    <string name="Main.VndErrorMessage">You may not have an application able to open this
		url: %s.</string>
    <string name="BookmarksListActivity.Title">Zirco Browser - Bookmarks</string>
    <string name="BookmarksListActivity.MenuSortMode">Sort by</string>
    <string name="BookmarksListActivity.MenuAddBookmark">Add bookmark</string>
    <string name="BookmarksListActivity.Empty">No bookmarks</string>
    <string name="BookmarksListActivity.MenuOpenInTab">Open in new tab</string>
    <string name="BookmarksListActivity.MenuEditBookmark">Edit bookmark</string>
    <string name="BookmarksListActivity.MenuDeleteBookmark">Delete bookmark</string>
    <string name="BookmarksListActivity.ImportBookmarks">Import bookmarks</string>
    <string name="BookmarksListActivity.ExportBookmarks">Export bookmarks</string>
    <string name="BookmarksListActivity.ClearBookmarks">Clear bookmarks</string>
    <string name="BookmarksListActivity.ImportingBookmarks">Importing bookmarks...</string>
    <string name="BookmarksListActivity.ExportingBookmarks">Exporting bookmarks...</string>
    <string name="BookmarksListActivity.ClearingBookmarks">Clearing bookmarks...</string>
    <string name="BookmarksListActivity.AlphaSortMode">Alphabetical</string>
    <string name="BookmarksListActivity.RecentSortMode">Most recent</string>
    <string name="BookmarksListActivity.ImportSource">Choose the import source</string>
    <string name="BookmarksListActivity.AndroidImportSource">Android browser bookmarks</string>
    <string name="BookmarksListActivity.ExportDialogTitle">Choose the export target</string>
    <string name="EditBookmarkActivity.Title">Edit bookmark</string>
    <string name="EditBookmarkActivity.TitleAdd">Add bookmark</string>
    <string name="EditBookmarkActivity.TitleLabel">Name:</string>
    <string name="EditBookmarkActivity.UrlLabel">Location:</string>
    <string name="HistoryListActivity.Title">Zirco Browser - History</string>
    <string name="HistoryListActivity.MenuOpenInTab">Open in new tab</string>
    <string name="HistoryListActivity.MenuDelete">Delete</string>
    <string name="DownloadListActivity.Title">Zirco Browser - Downloads</string>
    <string name="DownloadListActivity.Empty">No downloads</string>
    <string name="DownloadListActivity.Aborted">%s (Canceled)</string>
    <string name="DownloadListActivity.Finished">%s (Finished)</string>
    <string name="AdBlockerWhiteListActivity.Title">Zirco Browser - Ad blocker white list</string>
    <string name="AdBlockerWhiteListActivity.Empty">White list is empty.</string>
    <string name="AdBlockerWhiteListActivity.AddMessage">Add to white list</string>
    <string name="AdBlockerWhiteListActivity.ClearMessage">Clear white list</string>
    <string name="server_port">ServerPort</string>
    <string name="remotedns_summary">Remote DNS Proxy Port</string>
    <string name="remotedns">Remote DNS Proxy</string>
</resources>